--- a/runnables/index.html
+++ b/runnables/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Jira Dashboard</title></head><body><div id="container"></div><script src="index.js"></script></body></html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"><title>Jira Dashboard</title><link rel="stylesheet" src="theme.css"/></head><body><div id="container"></div><script src="index0.js"></script></body></html>
